--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="styl.css">
+  <link rel="stylesheet" href="style.css">
   <title>Array Cardio</title>
+
 </head>
 
 <body>
+
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
 
   <script src="main.js" charset="utf-8"></script>
